--- a/src/index.scss
+++ b/src/index.scss
@@ -218,11 +218,11 @@ span.is-active
   }
   .nav-bar
   {
-    height:50px;
+    height:40px;
     position: fixed;
     width:100%;
     color: #ccc;
-    background-color: black;
+    background-color: #313131;
     display: flex;
     font-size: 20px;
     > *
